# game-off-2023

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/models/: cave.glb  climber.glb  flag.glb  gem.glb  ladder.glb  rope.glb  rune.glb  scale.glb
assets/shaders/: cloud_material.wgsl  transition_postprocess.wgsl
src/: audio.rs  camera.rs  cave.rs  clouds.rs  equipment.rs  level_manager.rs  main.rs  map.rs  player.rs  post_process.rs  scale.rs  undo.rs  util.rs
src/equipment/: ladder.rs  mod.rs  rewind.rs  rope.rs
src/states/: level.rs  loading.rs  menu.rs  mod.rs  transition.rs
src/ui/: constants.rs  end.rs  equipment.rs  failure.rs  keys.rs  mod.rs  scale.rs  stamina.rs
