[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_kira_audio = { version = "0.16" }
bevy_asset_loader = { version = "0.17" }
bevy_editor_pls = "0.5.0"
